# OpenDoge_firmware

./: .gitignore  CLAUDE.md  README.md  codex.md  gen52_model4800.onnx  requirements.txt
Changelog/: Codex.md
bringup/: scan_motors_readonly.py
bringup/el05/: README.md  el05_calibrate.py  el05_motor_menu.py  protocol_selftest.py
bringup/usb2can/: README.md
daemons/: opendoge-imu.service  opendoge-joystick.service
daemons/command_bridge/: README.md  opendoge_joystick.py
daemons/imu_bridge/: README.md  imu_webviz.py
deploy/: CLAUDE.md  CMakeLists.txt  package.xml
deploy/configs/: command.example  opendoge_deploy.conf
deploy/include/opendoge_deploy/: cli.hpp  controller.hpp  types.hpp
deploy/src/: controller.cpp  main.cpp  policy.cpp  runtime_io.cpp  safety.cpp
docs/: README.md  READNE.md
docs/URDF/: CMakeLists.txt  README.md  package.xml
docs/URDF/launch/: display.launch  gazebo.launch
docs/URDF/urdf/: Opendoge.csv
docs/URDF/xml/: Opendoge.xml
docs/dm-imu/: DOWNLOAD_NOTES.md  README.md
docs/dm-imu/11/dm-imu/04.固件/: README.md
docs/usb2can/: README.md  mi_motor_demo_TB.py
hardware/gamepad/: README.md  xbox_command_bridge.py
hardware/imu/: README.md  imu_webviz.py
hardware/motor/: README.md  calib_validate.py  discover_direction.py  el05_calibrate.py  el05_motor_menu.py  protocol_selftest.py  record_standing.py  scan_motors_readonly.py  trot_walker.py
hardware/motor/calibration_logs/: captures.json  directions.json  timeseries_20260626_044853.csv
policy/: opendoge_r25.onnx  opendoge_r26.onnx  opendoge_r5.onnx
scripts/: install_services.sh  opendoge-can.service  opendoge-imu.service  opendoge-joystick.service  opendoge-xboxdrv.service  setup_can.sh  setup_onnx.sh  setup_vcan.sh  start_robot.sh
sim2sim/: CLAUDE.md  README.md  calc_zero_offset.py
src/opendoge_bringup/: CMakeLists.txt  package.xml
src/opendoge_bringup/config/: controllers.yaml
src/opendoge_bringup/launch/: bringup.launch.py
src/opendoge_control/: CMakeLists.txt  package.xml
src/opendoge_control/config/: ros2_control.yaml
src/opendoge_deploy/: CLAUDE.md  CMakeLists.txt  package.xml
src/opendoge_deploy/configs/: command.example  imu.example  opendoge_deploy.conf
src/opendoge_deploy/include/opendoge_deploy/: controller.hpp  el05_socketcan.hpp  observer.hpp  policy.hpp  runtime_io.hpp  safety.hpp  status.hpp  types.hpp
src/opendoge_deploy/src/: cli.cpp  controller.cpp  el05_socketcan.cpp  main.cpp  observer.cpp  onnx_policy.cpp  runtime_io.cpp  safety.cpp  status.cpp
src/opendoge_description/: CMakeLists.txt  package.xml
src/opendoge_description/urdf/: opendoge_apx.urdf.xacro
src/opendoge_rl_node/: CMakeLists.txt  README.md  package.xml
src/opendoge_rl_node/config/: opendoge_rl.yaml
src/opendoge_rl_node/launch/: rl_node.launch.py
src/opendoge_rl_node/src/: rl_node.cpp
test/: CLAUDE.md  README.md  calc_zero_offset.py  deploy_gap_regression.py  deploy_mujoco.py
tools/: README.md
tools/el05/: README.md  el05_calibrate.py  el05_motor_menu.py  protocol_selftest.py
tools/imu/: README.md  dm_imu_bridge.py
tools/joystick/: README.md  diag_joystick.py  gamepad_tester.html  opendoge_joystick.py  start_joystick_bridge.sh  xbox_command_bridge.py
tools/usb2can/: README.md
web_tools/: opendoge_web.py
