<?xml version="1.0"?>
<package format="3">
  <name>opendoge_bringup</name>
  <version>0.0.1</version>
  <description>Bringup launch and controller configs for opendoge-apx.</description>

  <maintainer email="todo@example.com">TODO_MAINTAINER</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>opendoge_description</exec_depend>
  <exec_depend>opendoge_control</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

