<?xml version="1.0"?>
<package format="3">
  <name>opendoge_control</name>
  <version>0.0.1</version>
  <description>ros2_control configuration for opendoge-apx.</description>

  <maintainer email="todo@example.com">TODO_MAINTAINER</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ros2_control</exec_depend>
  <exec_depend>controller_manager</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

