<?xml version="1.0"?>
<package format="3">
  <name>opendoge_description</name>
  <version>0.0.1</version>
  <description>URDF/Xacro description for the opendoge-apx quadruped.</description>

  <maintainer email="todo@example.com">TODO_MAINTAINER</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

